logout,registration regularization,login

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -103,7 +103,9 @@
                         app:ms_enableFloatingLabel="false"
                         app:ms_errorColor="#FFFFFF"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
-                        app:ms_hintTextSize="16px"
+                        app:ms_hintTextSize="16sp"
+                        app:ms_hint="Marital Status"
+                        app:ms_hintColor="#F2146E"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
                         android:popupBackground="#e6e6e6"
@@ -159,8 +161,10 @@
                             app:ms_enableFloatingLabel="false"
                             app:ms_errorColor="#FFFFFF"
                             app:ms_typeface="fonts/Roboto-Regular.ttf"
-                            app:ms_hintTextSize="16px"
-                            app:ms_multiline="false"
+                            app:ms_hintTextSize="16sp"
+                            app:ms_hint="Willing to marry from the other communities?"
+                            app:ms_hintColor="#F2146E"
+                            app:ms_multiline="true"
                             app:ms_thickness="0.5dp"
                             android:popupBackground="#e6e6e6"
                             android:popupElevation="@dimen/floating_label_bottom_spacing"
@@ -436,7 +440,9 @@
             app:ms_enableFloatingLabel="false"
             app:ms_errorColor="#FFFFFF"
             app:ms_typeface="fonts/Roboto-Regular.ttf"
-            app:ms_hintTextSize="16px"
+            app:ms_hintTextSize="16sp"
+            app:ms_hint="Body Type"
+            app:ms_hintColor="#F2146E"
             app:ms_multiline="false"
             app:ms_thickness="0.5dp"
             android:popupBackground="#e6e6e6"
@@ -466,7 +472,9 @@
             app:ms_enableFloatingLabel="false"
             app:ms_errorColor="#FFFFFF"
             app:ms_typeface="fonts/Roboto-Regular.ttf"
-            app:ms_hintTextSize="16px"
+            app:ms_hintTextSize="16sp"
+            app:ms_hint="Complexion"
+            app:ms_hintColor="#F2146E"
             app:ms_multiline="false"
             app:ms_thickness="0.5dp"
             android:popupBackground="#e6e6e6"
@@ -496,7 +504,9 @@
             app:ms_enableFloatingLabel="false"
             app:ms_errorColor="#FFFFFF"
             app:ms_typeface="fonts/Roboto-Regular.ttf"
-            app:ms_hintTextSize="16px"
+            app:ms_hintTextSize="16sp"
+            app:ms_hint="Physical Status"
+            app:ms_hintColor="#F2146E"
             app:ms_multiline="false"
             app:ms_thickness="0.5dp"
             android:popupBackground="#e6e6e6"
@@ -747,7 +757,9 @@
                             app:ms_enableFloatingLabel="false"
                             app:ms_errorColor="#FFFFFF"
                             app:ms_typeface="fonts/Roboto-Regular.ttf"
-                            app:ms_hintTextSize="16px"
+                            app:ms_hintTextSize="16sp"
+                            app:ms_hint="Food"
+                            app:ms_hintColor="#F2146E"
                             app:ms_multiline="false"
                             app:ms_thickness="0.5dp"
                             android:popupBackground="#e6e6e6"
@@ -777,7 +789,9 @@
                             app:ms_enableFloatingLabel="false"
                             app:ms_errorColor="#FFFFFF"
                             app:ms_typeface="fonts/Roboto-Regular.ttf"
-                            app:ms_hintTextSize="16px"
+                            app:ms_hintTextSize="16sp"
+                            app:ms_hint="Drinking"
+                            app:ms_hintColor="#F2146E"
                             app:ms_multiline="false"
                             app:ms_thickness="0.5dp"
                             android:popupBackground="#e6e6e6"
@@ -807,7 +821,9 @@
                             app:ms_enableFloatingLabel="false"
                             app:ms_errorColor="#FFFFFF"
                             app:ms_typeface="fonts/Roboto-Regular.ttf"
-                            app:ms_hintTextSize="16px"
+                            app:ms_hintTextSize="16sp"
+                            app:ms_hint="Smoking"
+                            app:ms_hintColor="#F2146E"
                             app:ms_multiline="false"
                             app:ms_thickness="0.5dp"
                             android:popupBackground="#e6e6e6"
@@ -869,7 +885,9 @@
                             app:ms_enableFloatingLabel="false"
                             app:ms_errorColor="#FFFFFF"
                             app:ms_typeface="fonts/Roboto-Regular.ttf"
-                            app:ms_hintTextSize="16px"
+                            app:ms_hintTextSize="16sp"
+                            app:ms_hint="Family Status"
+                            app:ms_hintColor="#F2146E"
                             app:ms_multiline="false"
                             app:ms_thickness="0.5dp"
                             android:popupBackground="#e6e6e6"
@@ -899,7 +917,9 @@
                             app:ms_enableFloatingLabel="false"
                             app:ms_errorColor="#FFFFFF"
                             app:ms_typeface="fonts/Roboto-Regular.ttf"
-                            app:ms_hintTextSize="16px"
+                            app:ms_hintTextSize="16sp"
+                            app:ms_hint="Family Type"
+                            app:ms_hintColor="#F2146E"
                             app:ms_multiline="false"
                             app:ms_thickness="0.5dp"
                             android:popupBackground="#e6e6e6"
@@ -929,7 +949,9 @@
                             app:ms_enableFloatingLabel="false"
                             app:ms_errorColor="#FFFFFF"
                             app:ms_typeface="fonts/Roboto-Regular.ttf"
-                            app:ms_hintTextSize="16px"
+                            app:ms_hintTextSize="16sp"
+                            app:ms_hint="Family Value"
+                            app:ms_hintColor="#F2146E"
                             app:ms_multiline="false"
                             app:ms_thickness="0.5dp"
                             android:popupBackground="#e6e6e6"
