--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -88,7 +88,9 @@
                     app:ms_enableFloatingLabel="false"
                     app:ms_errorColor="#FFFFFF"
                     app:ms_typeface="fonts/Roboto-Regular.ttf"
-                    app:ms_hintTextSize="16px"
+                    app:ms_hintTextSize="16sp"
+                    app:ms_hint="Profile For"
+                    app:ms_hintColor="#F2146E"
                     app:ms_multiline="false"
                     app:ms_thickness="0.5dp"
                     android:popupBackground="#e6e6e6"
@@ -142,7 +144,9 @@
                         app:ms_enableFloatingLabel="false"
                         app:ms_errorColor="#FFFFFF"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
-                        app:ms_hintTextSize="16px"
+                        app:ms_hintTextSize="16sp"
+                        app:ms_hint="Gender"
+                        app:ms_hintColor="#F2146E"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
                         android:popupBackground="#e6e6e6"
