--- a/app/src/main/res/layout/tab_my_profile.xml
+++ b/app/src/main/res/layout/tab_my_profile.xml
@@ -550,7 +550,7 @@ android:background="#ffffff"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                         app:ms_hint="Profile For"
                         app:ms_hintTextSize="16sp"
-                        app:ms_hintColor="@color/black"
+                        app:ms_hintColor="#F2146E"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
                         android:popupBackground="#e6e6e6"
@@ -626,7 +626,7 @@ android:background="#ffffff"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                         app:ms_hintTextSize="16sp"
                         app:ms_hint="Body Type"
-                        app:ms_hintColor="#000000"
+                        app:ms_hintColor="#F2146E"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
                         android:popupBackground="#e6e6e6"
@@ -670,7 +670,7 @@ android:background="#ffffff"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                         app:ms_hintTextSize="16sp"
                         app:ms_hint="Complexion"
-                        app:ms_hintColor="#000000"
+                        app:ms_hintColor="#F2146E"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
                         android:popupBackground="#e6e6e6"
@@ -751,7 +751,7 @@ android:background="#ffffff"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                         app:ms_hintTextSize="16sp"
                         app:ms_hint="Physical Status"
-                        app:ms_hintColor="#000000"
+                        app:ms_hintColor="#F2146E"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
                         android:popupBackground="#e6e6e6"
@@ -794,7 +794,7 @@ android:background="#ffffff"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                         app:ms_hintTextSize="16sp"
                         app:ms_hint="Height"
-                        app:ms_hintColor="#000000"
+                        app:ms_hintColor="#F2146E"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
                         android:popupBackground="#e6e6e6"
@@ -839,7 +839,7 @@ android:background="#ffffff"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                         app:ms_hintTextSize="16sp"
                         app:ms_hint="Weight"
-                        app:ms_hintColor="#000000"
+                        app:ms_hintColor="#F2146E"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
                         android:popupBackground="#e6e6e6"
@@ -880,7 +880,7 @@ android:background="#ffffff"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                         app:ms_hintTextSize="16sp"
                         app:ms_hint="Mothrt Tongue"
-                        app:ms_hintColor="#000000"
+                        app:ms_hintColor="#F2146E"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
                         android:popupBackground="#e6e6e6"
@@ -923,7 +923,7 @@ android:background="#ffffff"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                         app:ms_hintTextSize="16sp"
                         app:ms_hint="Marital Status"
-                        app:ms_hintColor="#000000"
+                        app:ms_hintColor="#F2146E"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
                         android:popupBackground="#e6e6e6"
@@ -965,7 +965,7 @@ android:background="#ffffff"
                         app:ms_errorColor="#FFFFFF"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                         app:ms_hintTextSize="16sp"
-                        app:ms_hintColor="#000000"
+                        app:ms_hintColor="#F2146E"
                         app:ms_hint="Food"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
@@ -1007,7 +1007,7 @@ android:background="#ffffff"
                         app:ms_errorColor="#FFFFFF"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                         app:ms_hintTextSize="16sp"
-                        app:ms_hintColor="#000000"
+                        app:ms_hintColor="#F2146E"
                         app:ms_hint="Drinking"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
@@ -1050,7 +1050,7 @@ android:background="#ffffff"
                         app:ms_errorColor="#FFFFFF"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                         app:ms_hintTextSize="16sp"
-                        app:ms_hintColor="#000000"
+                        app:ms_hintColor="#F2146E"
                         app:ms_hint="Smoking"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
@@ -1494,7 +1494,7 @@ android:background="#ffffff"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
                                         app:ms_hint="Religion"
-                                        app:ms_hintColor="@color/black"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
                                         android:popupBackground="#e6e6e6"
@@ -1538,7 +1538,7 @@ android:background="#ffffff"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
                                         app:ms_hint="Caste"
-                                        app:ms_hintColor="@color/black"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
                                         android:popupBackground="#e6e6e6"
@@ -1613,7 +1613,7 @@ android:background="#ffffff"
                                         app:ms_errorColor="#FFFFFF"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
-                                        app:ms_hintColor="#000000"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_hint="Rassi"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
@@ -1655,7 +1655,7 @@ android:background="#ffffff"
                                         app:ms_errorColor="#FFFFFF"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
-                                        app:ms_hintColor="#000000"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_hint="Star"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
@@ -1697,7 +1697,7 @@ android:background="#ffffff"
                                         app:ms_errorColor="#FFFFFF"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
-                                        app:ms_hintColor="#000000"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_hint="Gothra"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
@@ -1739,7 +1739,7 @@ android:background="#ffffff"
                                         app:ms_errorColor="#FFFFFF"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
-                                        app:ms_hintColor="#000000"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_hint="Dosham"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
@@ -1817,7 +1817,7 @@ android:background="#ffffff"
                                         app:ms_errorColor="#FFFFFF"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
-                                        app:ms_hintColor="#000000"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_hint="Country of Birth"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
@@ -1858,7 +1858,7 @@ android:background="#ffffff"
                                         app:ms_errorColor="#FFFFFF"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
-                                        app:ms_hintColor="#000000"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_hint="State of Birth"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
@@ -1899,7 +1899,7 @@ android:background="#ffffff"
                                         app:ms_errorColor="#FFFFFF"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
-                                        app:ms_hintColor="#000000"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_hint="City of Birth"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
@@ -1940,7 +1940,7 @@ android:background="#ffffff"
                                         app:ms_errorColor="#FFFFFF"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
-                                        app:ms_hintColor="#000000"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_hint="Chart Style"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
@@ -2246,7 +2246,7 @@ android:background="#ffffff"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
                                         app:ms_hint="Country"
-                                        app:ms_hintColor="@color/black"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
                                         android:popupBackground="#e6e6e6"
@@ -2289,7 +2289,7 @@ android:background="#ffffff"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
                                         app:ms_hint="State"
-                                        app:ms_hintColor="@color/black"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
                                         android:popupBackground="#e6e6e6"
@@ -2331,7 +2331,7 @@ android:background="#ffffff"
                                         app:ms_errorColor="#FFFFFF"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
-                                        app:ms_hintColor="#000000"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_hint="City"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
@@ -2374,7 +2374,7 @@ android:background="#ffffff"
                                         app:ms_errorColor="#FFFFFF"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
-                                        app:ms_hintColor="#000000"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_hint="Residential Status"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
@@ -2768,7 +2768,7 @@ android:background="#ffffff"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
                                         app:ms_hint="Education"
-                                        app:ms_hintColor="@color/black"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
                                         android:popupBackground="#e6e6e6"
@@ -2872,7 +2872,7 @@ android:background="#ffffff"
                                         app:ms_errorColor="#FFFFFF"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
-                                        app:ms_hintColor="#000000"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_hint="Occupation"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
@@ -3341,7 +3341,7 @@ android:background="#ffffff"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
                                         app:ms_hint="Family Value"
-                                        app:ms_hintColor="@color/black"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
                                         android:popupBackground="#e6e6e6"
@@ -3381,7 +3381,7 @@ android:background="#ffffff"
                                         app:ms_errorColor="#FFFFFF"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
-                                        app:ms_hintColor="#000000"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_hint="Family Type"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
@@ -3422,7 +3422,7 @@ android:background="#ffffff"
                                         app:ms_errorColor="#FFFFFF"
                                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                                         app:ms_hintTextSize="16sp"
-                                        app:ms_hintColor="#000000"
+                                        app:ms_hintColor="#F2146E"
                                         app:ms_hint="Family Status"
                                         app:ms_multiline="false"
                                         app:ms_thickness="0.5dp"
