--- a/app/src/main/res/layout/activity_congrats.xml
+++ b/app/src/main/res/layout/activity_congrats.xml
@@ -90,6 +90,7 @@
                         android:textAlignment="viewEnd" />
 
                     <TextView
+                        android:id="@+id/tv_username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="abcd@xyz.com"
@@ -122,6 +123,7 @@
                         android:textAlignment="viewEnd" />
 
                     <TextView
+                        android:id="@+id/tv_id"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="I567434"
