partner pref,login,forgot password,logout

--- a/app/src/main/res/layout/activity_tab_for_profile.xml
+++ b/app/src/main/res/layout/activity_tab_for_profile.xml
@@ -46,6 +46,12 @@
                 android:layout_height="wrap_content"
                 android:text="Partner Preferences" />
 
+            <android.support.design.widget.TabItem
+                android:id="@+id/ti_uploadPhoto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Upload Photo" />
+
 
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
