back press,my profile

--- a/app/src/main/res/layout/tab_change_password.xml
+++ b/app/src/main/res/layout/tab_change_password.xml
@@ -34,7 +34,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Edit Email Address"
+                android:text="Change Password"
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="Roboto-Medium"
                 android:textStyle="bold"
@@ -70,20 +70,19 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:text="A valid e-mail id will be used \nto send you partner search mailers,\nmember to member communication mailers and special offers."
+                android:text="Your password must have a minimum of 6 characters.\n We recommend you choose an alphanumeric password"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
                 android:fontFamily="Roboto-Medium"
                 android:textSize="16sp"
                 android:layout_marginBottom="40dp"/>
 
-
                 <ScrollView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="10dp">
+                    android:layout_marginBottom="0dp">
 
-                <LinearLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -106,10 +105,60 @@
                     android:background="@drawable/border">
 
                     <EditText
-                        android:id="@+id/edt_email"
+                        android:id="@+id/edt_current_pwd"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:hint="Email"
+                        android:hint="Current Password"
+                        android:textColorHint="#FFFFFF"
+                        android:background="#00000000"
+                        android:layout_gravity="center_horizontal"
+                        android:fontFamily="Roboto-Regular"
+                        android:inputType="textEmailAddress"
+                        android:textSize="16dp"
+                        android:padding="10dp"
+                        android:textColor="#ffffff"
+                        />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
+                    android:orientation="vertical"
+                    android:layout_weight="1"
+                    android:background="@drawable/border">
+
+                    <EditText
+                        android:id="@+id/edt_new_pwd"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="New Password"
+                        android:textColorHint="#FFFFFF"
+                        android:background="#00000000"
+                        android:layout_gravity="center_horizontal"
+                        android:fontFamily="Roboto-Regular"
+                        android:inputType="textEmailAddress"
+                        android:textSize="16dp"
+                        android:padding="10dp"
+                        android:textColor="#ffffff"
+                        />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
+                    android:orientation="vertical"
+                    android:layout_weight="1"
+                    android:background="@drawable/border">
+
+                    <EditText
+                        android:id="@+id/edt_confirm_new_pwd"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="Confirm New Password"
                         android:textColorHint="#FFFFFF"
                         android:background="#00000000"
                         android:layout_gravity="center_horizontal"
@@ -125,7 +174,7 @@
 
 
                 <Button
-                    android:id="@+id/btn_save"
+                    android:id="@+id/btn_change"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -137,7 +186,7 @@
                     android:layout_marginRight="70dp"
                     android:layout_marginStart="70dp"
                     android:layout_marginLeft="70dp"
-                    android:text="Save"
+                    android:text="Change"
                     android:textStyle="bold"
                     android:textAllCaps="false"
                     android:fontFamily="Roboto-Medium"
