--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -25,7 +25,7 @@
         <item
             android:id="@+id/menu_go_setting"
             android:checked="true"
-            android:icon="@mipmap/iconsearch"
+            android:icon="@drawable/ic_settings"
             android:title="@string/menu_setting" />
 
         <item
