--- a/app/src/main/res/layout/activity_tab_view_parent.xml
+++ b/app/src/main/res/layout/activity_tab_view_parent.xml
@@ -23,7 +23,8 @@
         layout="@layout/activity_tab_for_all"
         android:layout_below="@id/toolbar_main"
         android:layout_height="match_parent"
-        android:layout_width="match_parent"></include>
+        android:layout_width="match_parent"
+        android:layout_above="@id/bottomNavigationView"></include>
 
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/bottomNavigationView"
@@ -43,13 +44,14 @@
 
             />
 
-      <!--  <FrameLayout
+        <FrameLayout
             android:id="@+id/Container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_above="@id/bottomNavigationView"
             android:layout_below="@+id/toolbar_main"
-            android:background="#000000"
-            android:visibility="invisible"/>-->
+            android:background="#00000000"
+            android:visibility="visible"/>
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
