--- a/app/src/main/res/layout/tab_my_profile.xml
+++ b/app/src/main/res/layout/tab_my_profile.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_marginBottom="70dp"
-android:background="#ffffff"
->
+    android:background="#ffffff">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -58,15 +57,12 @@ android:background="#ffffff"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-
                     android:weightSum="1">
-
 
                     <Space
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.80"/>
-
 
                     <ImageView
                         android:id="@+id/img_clear_about"
@@ -167,6 +163,7 @@ android:background="#ffffff"
                     android:visibility="visible"/>
 
             </LinearLayout>
+
             <LinearLayout
 
                 android:layout_width="match_parent"
@@ -175,7 +172,6 @@ android:background="#ffffff"
                 android:orientation="horizontal"
                 android:weightSum="2"
            >
-
 
     <LinearLayout
         android:layout_width="0dp"
@@ -286,6 +282,7 @@ android:background="#ffffff"
             android:textColor="#4A4A4A"
             android:gravity="center_vertical"
             />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
