--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,8 @@
 
     <color name="navigation_default">#000000</color>
     <color name="navigation_checked">#F2146E</color>
+    <color name="btm_navigation_default">#AE0C4E</color>
+    <color name="btm_navigation_checked">#F2146E</color>
     <!-- <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>-->
