--- a/app/src/main/res/layout/activity_tab_for_matches.xml
+++ b/app/src/main/res/layout/activity_tab_for_matches.xml
@@ -29,9 +29,10 @@
             android:id="@+id/tl_parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabIndicatorColor="#000000"
+            app:tabIndicatorColor="#00000000"
             app:tabBackground="@drawable/tab_color_selector"
-            app:tabIndicatorHeight="3dp">
+            app:tabIndicatorHeight="3dp"
+            app:tabMode="scrollable">
 
             <android.support.design.widget.TabItem
                 android:id="@+id/ti_matches"
