--- a/app/src/main/res/layout/activity_tab_view_parent.xml
+++ b/app/src/main/res/layout/activity_tab_view_parent.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_above="@id/bottomNavigationView"></include>
 
-        <android.support.design.widget.BottomNavigationView
+      <!--  <android.support.design.widget.BottomNavigationView
             android:id="@+id/bottomNavigationView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -42,6 +42,19 @@
             app:itemTextColor="@color/white"
             app:menu="@menu/menu_bottom_nav"
 
+            />-->
+
+        <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
+            android:id="@+id/bottomNavigationView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/btm_state_list"
+            app:itemIconTint="@color/white"
+            app:itemTextColor="@color/white"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            app:menu="@menu/menu_bottom_nav"
             />
 
         <FrameLayout
