--- a/app/src/main/res/layout/tab_home.xml
+++ b/app/src/main/res/layout/tab_home.xml
@@ -54,6 +54,9 @@
                     android:text="Bride"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
+                    android:buttonTint="#F2146E"
+                    android:autofillHints="#F2146E"
+                    android:backgroundTint="#F2146E"
                     android:textColor="#4A4A4A"
                     android:textAlignment="center"
                     android:textStyle="bold"/>
@@ -64,6 +67,7 @@
                     android:text="Groom"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
+                    android:buttonTint="#F2146E"
                     android:textColor="#4A4A4A"
                     android:textAlignment="center"
                     android:textStyle="bold"/>
@@ -100,6 +104,7 @@
                     android:gravity="center"
                     android:textStyle="bold"
                     android:inputType="number"
+                    android:imeActionId="1"
                     />
                 <TextView
                     android:layout_width="0dp"
@@ -128,6 +133,7 @@
                     android:gravity="center"
                     android:textStyle="bold"
                     android:inputType="number"
+                    android:imeActionId="2"
                     />
 
 
@@ -223,19 +229,19 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="0.75"
                 android:text="Search by ID :"
                 android:fontFamily="Roboto-Regular"
                 android:textSize="16sp"
                 android:textColor="#4A4A4A"
                 android:layout_gravity="center"
-                android:gravity="right"
+                android:gravity="center"
                 android:textStyle="bold"/>
             <EditText
                 android:id="@+id/et_search_id"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.5"
+                android:layout_weight="1.25"
                 android:background="@drawable/border_home_age"
                 android:fontFamily="Roboto-Regular"
                 android:textSize="16sp"
@@ -243,11 +249,13 @@
                 android:layout_marginLeft="50dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
+                android:padding="5dp"
                 android:textColor="#4A4A4A"
                 android:layout_gravity="start"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:inputType="number"
+                android:inputType="text"
+                android:imeActionId="3"
                 />
         </LinearLayout>
 
