--- a/app/src/main/res/layout/tab_profile_detail.xml
+++ b/app/src/main/res/layout/tab_profile_detail.xml
@@ -27,6 +27,31 @@ android:background="#ffffff"
             android:background="#FFFFFF"
             android:orientation="vertical">
 
+            <cn.gavinliu.android.lib.shapedimageview.ShapedImageView
+                android:id="@+id/img_profile_pic"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
+                android:layout_gravity="center"
+                android:src="@mipmap/userprofile"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="#FFFFFF">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_prof_gallery"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="20dp"
+                    android:background="#00000000">
+                </android.support.v7.widget.RecyclerView>
+            </LinearLayout>
+
             <Button
                 android:id="@+id/btnAboutGroomBride"
                 android:layout_width="fill_parent"
